--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image:url(../earth-g14b76a2f2_1920.jpg);
+            background-image:url(earth-g14b76a2f2_1920.jpg);
         }
         #cc{
          border: 1px solid black;   
@@ -33,7 +33,7 @@
         const canvas = document.getElementById("cc");
         const ctx = canvas.getContext("2d");
         const img = new Image();
-        img.src = '../11.png';
+        img.src = '11.png';
         const width = canvas.width;
         const height = canvas.height;
         const tankWidth = 50;
