--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         const canvas = document.getElementById("cc");
         const ctx = canvas.getContext("2d");
         const img = new Image();
-        img.src = '11.png';
+        img.src = './11.png';
         const width = canvas.width;
         const height = canvas.height;
         const tankWidth = 50;
@@ -177,5 +177,5 @@
         draw();
 
     </script>
-    <script src = "../팀플/1.js"></script>
+    <script src = "./팀플/1.js"></script>
 </body>
