--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         
                 clearInterval(start);
                 if (confirm("위성 착지 성공.")) {
-                    location.replace("http://127.0.0.1:5500/%ED%8C%80%ED%94%8C/3.html");
+                    location.replace("https://30ling.github.io/gravetrack2/");
                 }
             }
 
