--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 document.write('<script type="text/javascript" src="스크립트 경로"><"+"/script>');
         
                 clearInterval(start);
-                if (confirm("위성 착지 성공.")) {
+                if (confirm("위성 포획 성공.")) {
                     location.replace("https://30ling.github.io/gravetrack2/");
                 }
             }
